changed structure of AOCLUtils dir and add fixes for configure_fpga

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ sgbench
 docs/*
 build/*
 bin/*
-build_cuda/
-build_ocl/
-build_omp/
-build_omp_arm/
+build*/
+#build_cuda/
+#build_ocl/
+#build_omp/
+#build_omp_arm/
